Station templates working

--- a/stations/templates/stations/station_list.html
+++ b/stations/templates/stations/station_list.html
@@ -1,7 +1,8 @@
 {% if stations %}
     <ul>
     {% for station in stations %}
-        <li><a href="/stations/{{ station.id }}/">{{ station.station_code }}</a><span>{{ station.station_name }}</span></li>
+        {# <li><a href="/stations/{{ station.id }}/">{{ station.station_code }}</a><span>{{ station.station_name }}</span></li> #}
+        <li><a href="{% url 'stations:station-detail' station.id %}">{{ station.station_code }}</a><span>{{ station.station_name }}</span></li>
     {% endfor %}
     </ul>
 {% else %}
