--- a/stations/templates/stations/station_list.html
+++ b/stations/templates/stations/station_list.html
@@ -8,3 +8,4 @@
 {% else %}
     <p>No stations are available.</p>
 {% endif %}
+<a href="{% url 'stations:station-add' %}"><button type="button" name="add">Add New Station</button></a>
