--- a/stations/templates/stations/station_form.html
+++ b/stations/templates/stations/station_form.html
@@ -1,4 +1,5 @@
 <form method="post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Save">
+    <a href="{% url 'stations:station-list' %}"><button type="button" name="back">Back</button></a>
 </form>
